# Simu_01-2022

./: .gitignore  .hdoc.toml  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build.yml
Class 03-09/: array.h  main.cpp
dataStructures/array/charArray/: charArray.cpp  charArray.h
dataStructures/array/intArray/: intArray.cpp  intArray.h
docs/setup/: clion.md  index.md  vscode.md  vsstudio.md
utils/console/: Console.cpp  Console.h
